--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -20,9 +20,9 @@ file(GLOB UNIT_TESTS "*.cpp")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/externals/sanitizers-cmake/cmake" ${CMAKE_MODULE_PATH})
 # set(SANITIZE_ADDRESS TRUE)
-set(SANITIZE_MEMORY TRUE)
+# set(SANITIZE_MEMORY TRUE)
 set(SANITIZE_THREAD TRUE)
-set(SANITIZE_UNDEFINED TRUE)
+# set(SANITIZE_UNDEFINED TRUE)
 
 #-DSANITIZE_ADDRESS=On
 find_package(Sanitizers)
