--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -19,9 +19,9 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/config.hpp.in ${CMAKE_CURRENT
 file(GLOB UNIT_TESTS "*.cpp")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/externals/sanitizers-cmake/cmake" ${CMAKE_MODULE_PATH})
-# set(SANITIZE_ADDRESS TRUE)
+set(SANITIZE_ADDRESS TRUE)
 # set(SANITIZE_MEMORY TRUE)
-set(SANITIZE_THREAD TRUE)
+# set(SANITIZE_THREAD TRUE)
 # set(SANITIZE_UNDEFINED TRUE)
 
 #-DSANITIZE_ADDRESS=On
